# HybridOCR

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ocr_microservice/: initializers.py  main.py  micro_config.py
verbumapi/: config.py  database.py  main.py  utils.py
verbumapi/easyocr_api/: recognition.py  router.py
verbumapi/hybrid_recognition/: recognition.py  router.py
verbumapi/multiproc_manager/: manager.py
verbumapi/ocr_microservice/: dependencies.py  main.py  micro_config.py  recognition.py
verbumapi/paddle_api/: recognition.py
verbumapi/recognition/: config.py  dependencies.py  router.py  schemas.py  service.py
verbumapi/tesseract_api/: recognition.py  router.py
